<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_titulo"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:gravity="center"
            style="@style/Cabecera"
            android:text="@string/identificador_de_plagas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/IPlaga"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="5:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_titulo"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/IPlaga">

            <TextView
                android:id="@+id/TPlaga"
                style="@style/Subtitulos_contenido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plaga_identificada" />

            <TextView
                android:id="@+id/TDescripcion"
                style="@style/Descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripci_nde_la_plaga" />

            <TextView
                style="@style/Indices"
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/m_todos_de_combate" />

            <TextView
                android:id="@+id/TCombate"
                style="@style/Contenido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/descripci_n_de_los_m_todos_de_combate" />
        </LinearLayout>

        <Button
            style="@style/Botones"
            android:background="@drawable/shape_button"
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/regresar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>